--- a/manifests/argocd/application/base/sample-app.yaml
+++ b/manifests/argocd/application/base/sample-app.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   destination:
     server: https://kubernetes.default.svc
-  project: sample-app
+  project: tenant-2
   source:
     repoURL: https://github.com/multi-tenant-example-org/tenant-2.git
     targetRevision: HEAD
