--- a/manifests/argocd/application/base/sample-app.yaml
+++ b/manifests/argocd/application/base/sample-app.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: argocd
 spec:
   destination:
+    namespace: tenant-2
     server: https://kubernetes.default.svc
   project: tenant-2
   source:
